--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,6 +106,7 @@ section {
     display: block;
 }
 body {
+    font-family: "Pretendard-Regular";
     line-height: 1;
 }
 ol,
@@ -127,172 +128,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
-.button {
-    font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
-    line-height: 1;
-}
-.notWorkEvent {
-    pointer-events: none;
-}
-.loader {
-    width: 16px;
-    height: 16px;
-    border: 2px solid #d9d9d9;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-/* A Button */
-.button--soild-blue {
-    color: #ffffff;
-    background-color: #0740e4;
-}
-.button--soild-black {
-    color: #ffffff;
-    background-color: #101010;
-}
-.button--soild-blue:disabled,
-.button--soild-black:disabled {
-    pointer-events: none;
-    color: #ffffff;
-    background-color: #ededed;
-}
-.button--soild-blue:active {
-    color: #ffffff;
-    background-color: #2c5bea;
-}
-.button--soild-black:active {
-    color: #ffffff;
-    background-color: #555555;
-}
-.soild-blue-off,
-.soild-black-off {
-    pointer-events: none;
-    color: #101010;
-    background: #f8f8f8;
-}
-/* B Button */
-.button--soild-white-blue {
-    color: #0740e4;
-    background-color: #ffffff;
-}
-.button--soild-white-black {
-    color: #101010;
-    background-color: #ffffff;
-}
-.button--soild-white-blue:disabled,
-.button--soild-white-black:disabled {
-    pointer-events: none;
-    color: #ffffff;
-    background-color: #ededed;
-}
-.button--soild-white-blue:active {
-    color: #4f75ef;
-    background-color: #ededed;
-}
-.button--soild-white-black:active {
-    color: #555555;
-    background-color: #ededed;
-}
-
-/* C Button */
-.button--outline-blue {
-    color: #0740e4;
-    background-color: #fafbff;
-    border: #e5ebfc 1px solid;
-}
-.button--outline-white {
-    color: #707070;
-    background-color: #ffffff;
-    border: #ededed 1px solid;
-}
-.button--outline-blue:active {
-    color: #a7a7a7;
-    background-color: #ffffff;
-    border: #f8f8f8 1px solid;
-}
-.button--outline-white:active {
-    color: #7590f4;
-    background-color: #fafbff;
-    border: #f5f8ff 1px solid;
-}
-.outline-blue-off,
-.outline-white-off {
-    pointer-events: none;
-    color: #707070;
-    background: #ffffff;
-    border: 1px solid #ededed;
-}
-
-/* 버튼 사이즈 */
-.button--tiny {
-    font-size: 12px;
-    padding: 0px 8px;
-    height: 32px;
-}
-.button--xsmall {
-    font-size: 14px;
-    padding: 0px 8px;
-    height: 38px;
-}
-.button--small {
-    font-size: 14px;
-    padding: 0px 16px;
-    height: 46px;
-}
-.button--medium {
-    font-size: 16px;
-    padding: 0px 16px;
-    height: 52px;
-}
-.button--large {
-    font-size: 16px;
-    padding: 0px 16px;
-    height: 56px;
-}
-.button--xlarge {
-    font-size: 18px;
-    padding: 0px 16px;
-    height: 60px;
-}
-
-.button--icon {
-    margin-right: 3px;
-}
-
-.input-group {
-    color: #333;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 20px;
-    width: 100%;
-}
-label {
-    color: #a7a7a7;
-    font-size: 12px;
-    display: block;
-    margin-bottom: 2px;
-}
-.required {
-    color: #ff673e;
-    margin-left: 3px;
+a {
+    text-decoration: none !important;
+    color: #000;
 }
 
 .input {
