--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,18 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/*
+ * dependency : none
+ */
 
+/* ----- reset ----- */
+html,
+body {
+    word-break: break-word;
+    line-height: 24px;
+    font-family: Pretendard, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+    color: #101010;
+}
 html,
 body,
 div,
@@ -17,6 +27,16 @@ h4,
 h5,
 h6,
 p,
+time,
+figure,
+article,
+nav,
+header,
+footer,
+hgroup,
+video,
+audio,
+aside,
 blockquote,
 pre,
 a,
@@ -29,6 +49,7 @@ code,
 del,
 dfn,
 em,
+font,
 img,
 ins,
 kbd,
@@ -42,10 +63,6 @@ sub,
 sup,
 tt,
 var,
-b,
-u,
-i,
-center,
 dl,
 dt,
 dd,
@@ -63,102 +80,96 @@ tfoot,
 thead,
 tr,
 th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+td {
+    font-weight: inherit;
+    font-style: inherit;
+}
+*,
+:after,
+:before {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-body {
-    font-family: "Pretendard-Regular";
-    line-height: 1;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 ol,
 ul {
     list-style: none;
 }
-blockquote,
-q {
-    quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: "";
-    content: none;
+a {
+    color: #101010;
+    text-decoration: none;
 }
 table {
-    border-collapse: collapse;
+    border-collapse: separate;
     border-spacing: 0;
 }
-a {
-    text-decoration: none !important;
-    color: #000;
+caption,
+th,
+td {
+    text-align: left;
+    font-weight: normal;
+}
+figure,
+article,
+header,
+footer,
+nav,
+hgroup,
+video,
+audio,
+aside,
+main {
+    display: block;
 }
 
-.input {
-    color: rgba(0, 0, 0, 0.87);
-    font-size: 1rem;
-    font-weight: 400;
-    letter-spacing: 0.009375em;
-    text-decoration: inherit;
-    text-transform: inherit;
-    align-self: flex-end;
-    box-sizing: border-box;
-    padding: 7px 0px 2px;
-    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: none;
-    width: 100%;
-    border-bottom: 2px solid #ededed;
-    border-radius: 4px 4px 0 0;
-    outline: none;
-}
-
-.input:focus {
-    border-bottom: 2px solid;
-    border-bottom-color: #101010;
-}
-.error-message {
-    color: #ff673e;
+/* ----- form ---- */
+label {
     display: inline-block;
-    font-size: 12px;
-    line-height: 18px;
-    margin: 5px 0 0;
+    font-family: Pretendard, sans-serif;
+}
+button,
+input,
+textarea {
+    -webkit-appearance: none;
+    display: inline-block;
+    border: 0;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    outline: none;
+    font-size: 15px;
+    font-family: Pretendard, sans-serif;
+}
+input[type="radio"],
+input[type="checkbox"] {
+    width: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* ----- mobile ----- */
+html {
+    -ms-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
+body,
+textarea:focus,
+input:focus,
+a:focus {
+    -webkit-tap-highlight-color: rgba(135, 135, 135, 0.08);
+}
+
+body {
+    -webkit-touch-callout: none;
 }
